objects/Attachment__c.object
<CustomObject>
    <description>The documents uploaded as part of a case. These are physically stored in an external repository. Attachments object only contains the link to the external repository.</description>
    <fields>
        <fullName>AttachmentLink__c</fullName>
        <description>The link to the VisualForce page which creates the URL to retrieve documents from S3 and display in a PrizmDoc viewer.</description>
        <formula>HYPERLINK(&apos;/apex/DRS_Attachment_View?id=&apos; + Id,  Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The link to the VisualForce page which creates the URL to retrieve documents from S3 and display in a PrizmDoc viewer.</inlineHelpText>
        <label>Attachment Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <description>The original author of the attachment.</description>
        <inlineHelpText>The original author of the attachment.</inlineHelpText>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthoredDate__c</fullName>
        <description>The date on which original document was authored.</description>
        <inlineHelpText>The date on which original document was authored.</inlineHelpText>
        <label>Authored Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CaseItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Item</label>
        <referenceTo>CaseItem__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CategoryA__c</fullName>
        <description>The first tier of category in category hierarchy</description>
        <inlineHelpText>The first tier of category in category hierarchy</inlineHelpText>
        <label>Category A</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryB__c</fullName>
        <description>The second tier of category in category hierarchy</description>
        <inlineHelpText>The second tier of category in category hierarchy</inlineHelpText>
        <label>Category B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryC__c</fullName>
        <description>The third tier of category in category hierarchy</description>
        <inlineHelpText>The third tier of category in category hierarchy</inlineHelpText>
        <label>Category C</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CorrespondenceDateFrom__c</fullName>
        <description>The start date for the communication/correspondence for which the attachment is created.</description>
        <inlineHelpText>The start date for the communication/correspondence for which the attachment is created.</inlineHelpText>
        <label>Correspondence Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CorrespondenceDateTo__c</fullName>
        <description>The end date for the communication/correspondence for which the attachment is created.</description>
        <inlineHelpText>The end date for the communication/correspondence for which the attachment is created.</inlineHelpText>
        <label>Correspondence Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateDecisionSent__c</fullName>
        <description>Date decision was sent to parties (insurer/worker). DRS: Key metric used in reporting to indicate end of case lifecycle.</description>
        <inlineHelpText>Date the decision was sent to parties.</inlineHelpText>
        <label>Date Decision Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternallyVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag to decide whether an attachment is externally visible or not</description>
        <inlineHelpText>The flag to decide whether an attachment is externally visible or not</inlineHelpText>
        <label>Externally Visible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <description>The name of the attached file.</description>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalAuthor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used y MRS to indicate the Decision Maker for Attachments in the Decision Category.</description>
        <inlineHelpText>The person who owns this document.</inlineHelpText>
        <label>Internal Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternalReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used y MRS to indicate the Peer Reviewer for Attachments in the Decision Category.</description>
        <inlineHelpText>The person who reviewed this document.</inlineHelpText>
        <label>Internal Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attachments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S3Key__c</fullName>
        <description>The Case, Case Item and Attachment IDs combination for the key of document stored in S3.</description>
        <inlineHelpText>The Case, Case Item and Attachment IDs combination for the key of document stored in S3.</inlineHelpText>
        <label>S3 Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmittedBy__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UploadId__c</fullName>
        <description>The Id of the Multipart upload object. This Id is generated at the time of initialisation of multipart uploads. The Id is then used for upload requests as well as completion or abortion requests.</description>
        <inlineHelpText>The Id of the Multipart upload object. This Id is generated at the time of initialisation of multipart uploads. The Id is then used for upload requests as well as completion or abortion requests.</inlineHelpText>
        <label>Upload Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Attachment</label>
    <nameField>
        <displayFormat>AT-{000000000}</displayFormat>
        <label>Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>